<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PcoMobile</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="button_login">Sign in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_username">This username contains invalid characters</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Username or password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="dialog_hint">Please enter..</string>
    <string name="dialog_default"></string>
    <string name="dialog_state_default">MA</string>
    <string name="dialog_warning">Warning ?</string>
    <!-- menu buttons -->
    <string name="citation_button">Citation</string>
    <string name="chalk_button">Chalk</string>
    <string name="paybycell_button">PayByCell</string>
    <string name="history_button">History</string>
    <string name="setup_button">Setup</string>
    <string name="update_db_button">Update Database</string>
    <string name="printer_button">Printer</string>
    <string name="logout_button">Sign out</string>
    <!-- citation activity buttons -->
    <string name="state_button">State</string>
    <string name="plate_button">Plate #</string>
    <string name="permit_button">Permit #</string>
    <string name="veh_make_button">Make</string>
    <string name="veh_color_button">Color</string>
    <string name="veh_type_button">Type</string>
    <string name="violtn_loctn_button">Location</string>
    <string name="violtn_code_button">Violation</string>
    <string name="fine_button">Fine</string>
    <string name="pub_comments_button">Comments (public)</string>
    <string name="pri_comments_button">Comments (private)</string>
    <string name="dialog_confirm_button">OK</string>
    <string name="dialog_cancel_button">Cancel</string>
    <!-- update db buttons -->
    <string name="update_lookups_button">Update Lookups</string>    
    <!-- Activity titles -->
    <string name="title_activity_menu">Main Menu</string>
    <string name="title_activity_citation">Issue Citation</string>
    <string name="title_section1">Citation</string>
    <string name="title_section2">Picture</string>
    <string name="title_section3">Save &amp; Exit</string>
    <string name="saveprint_dummy">Requires a list view probably ..</string>
    <string name="picture_dummy">Requires camera, three buttons, etc..</string>
    <string name="title_activity_update_db">UpdateDbActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>