<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CitationActivity$DummySectionFragment" >

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        tools:ignore="UselessParent" >

        <Button
            android:id="@+id/state_button"
            style="@style/citation_button"
            android:text="@string/state_button"
            android:onClick="confirmFireMissiles" />

        <Button
            android:id="@+id/plate_button"
            style="@style/citation_button"
            android:text="@string/plate_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_weight="1"
        android:orientation="horizontal"
        tools:ignore="UselessParent" >

        <Button
            android:id="@+id/permit_button"
            style="@style/citation_button"
            android:text="@string/permit_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_weight="1"
        android:orientation="horizontal"
        tools:ignore="UselessParent" >

        <Button
            android:id="@+id/veh_make_button"
            style="@style/citation_button"
            android:text="@string/veh_make_button" />

        <Button
            android:id="@+id/veh_color_button"
            style="@style/citation_button"
            android:text="@string/veh_color_button" />

        <Button
            android:id="@+id/veh_type_button"
            style="@style/citation_button"
            android:text="@string/veh_type_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_weight="1"
        android:orientation="horizontal"
        tools:ignore="UselessParent" >

        <Button
            android:id="@+id/violtn_location_button"
            style="@style/citation_button"
            android:text="@string/violtn_loctn_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_weight="1"
        android:orientation="horizontal"
        tools:ignore="UselessParent" >

        <Button
            android:id="@+id/violtn_code_button"
            style="@style/citation_button"
            android:text="@string/violtn_code_button" />

        <Button
            android:id="@+id/fine_button"
            style="@style/citation_button"
            android:text="@string/fine_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_weight="1"
        android:orientation="horizontal"
        tools:ignore="UselessParent" >

        <Button
            android:id="@+id/pub_comments_button"
            style="@style/citation_button"
            android:text="@string/pub_comments_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_weight="1"
        android:orientation="horizontal"
        tools:ignore="UselessParent" >

        <Button
            android:id="@+id/pri_comments_button"
            style="@style/citation_button"
            android:text="@string/pri_comments_button" />
    </LinearLayout>

</LinearLayout>