<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/backGround"
    tools:context=".MenuActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/citation"
                style="@style/menu_button"
                android:text="@string/citation_button" />
            <Button
                android:id="@+id/chalk"
                style="@style/menu_button"
                android:text="@string/chalk_button" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/history"
                style="@style/menu_button"
                android:text="@string/history_button" />
            <Button
                android:id="@+id/paybycell"
                style="@style/menu_button"
                android:text="@string/paybycell_button" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/printer"
                style="@style/menu_button"
                android:text="@string/printer_button" />
            <Button
                android:id="@+id/logout"
                style="@style/menu_button"
                android:text="@string/logout_button" />
        </LinearLayout>
    
</LinearLayout>
